# snyk_test

./: build.gradle
gomod/: go.mod
pip/: requirements.txt  setup.py
pip/conda/: environment.yaml
pip/poetry/: pyproject.toml
